Improved kernel scheduling and added asynchronous timer interrupts for zones.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,24 @@
 .PHONY: all
-all:
-	make -C openmz COMPILER=compcert
+
+PROGRAM_FOLDERS = openmz zone1 zone2
+MERGED = merged.hex
+
+CC = riscv64-unknown-elf-gcc 
+OBJCOPY = riscv64-unknown-elf-objcopy
+
+all: $(PROGRAM_FOLDERS) $(MERGED)
+
+.PHONY: $(PROGRAM_FOLDERS)
+$(PROGRAM_FOLDERS):
+	make -C $@ CC=$(CC) TARGET=fe310
+
+$(MERGED): $(PROGRAM_FOLDERS)
+	cat $$(ls **/*.hex) > $(MERGED)
+	sed '/^:00000001FF$$/d' -i $(MERGED)
+	echo ':00000001FF' >> $(MERGED)
+
 clean:
-	make -C openmz clean
+	for folder in $(PROGRAM_FOLDERS); do \
+	    make -C $$folder clean; \
+	done	
+	rm -f $(MERGED)
