--- a/src/zone2/Makefile
+++ b/src/zone2/Makefile
@@ -1,38 +1,24 @@
+#  
 # Copyright 2020, Saab AB
-#
-# This software may be distributed and modified according to 
-# the terms of the GNU General Public License version 2. 
+#  
+# This software may be distributed and modified according to
+# the terms of the MIT License.
 # Note that NO WARRANTY is provided.
-# See "LICENSE.GPLv2" for details.
+# See "LICENSE.MIT" for details.
+#  
 
-PROGRAM = zone2
-ELF = $(PROGRAM).elf
-HEX = $(PROGRAM).hex
-SOURCES = main.c head.S
+INCLUDES = include $(BSP_DIR) $(HEXFIVE_DIR)
+SOURCES = $(wildcard *.c *.S) $(HEXFIVE_DIR)/libhexfive.S ../zone1/counter.S
+HEADERS = $(wildcard *.h $(addsuffix /*.h, $(INCLUDES)))
 
-BSP_DIR := ../bsp/$(TARGET)
-SIZE = riscv64-unknown-elf-size
-OBJCOPY = riscv64-unknown-elf-objcopy
+CFLAGS = -march=$(ARCH) -mabi=$(ABI) -mcmodel=$(CMODEL)
+CFLAGS += $(addprefix -I, $(INCLUDES)) -nostdlib
+CFLAGS += -T $(BSP_DIR)/memory.lds -T default.lds
+CFLAGS += -g -O3
 
-# add flags
-ifeq ($(CC), riscv64-unknown-elf-gcc)
-    CFLAGS += -std=c99 -O2 -mabi=ilp32 -march=rv32imac
-else ifeq ($(CC), ccomp)
-    CFLAGS += -O2 -Wall -finline-asm -fno-fpu
-endif
+.PHONY: compile 
+compile: $(PROGRAM_ELF)
 
-
-CFLAGS += -T $(BSP_DIR)/memory.lds -T default.lds -nostdlib -static
-
-all: $(ELF) $(HEX)
-
-$(ELF): $(wildcard *.S *.h *.c)
-	$(CC) $(CFLAGS) $(SOURCES) -o $(ELF)
-	$(SIZE) $(ELF)
-
-$(HEX): $(ELF)
-	$(OBJCOPY) -O ihex $(ELF) $(HEX)
-
-.PHONY: clean
-clean:
-	rm -f $(ELF) $(HEX)
+$(PROGRAM_ELF): $(SOURCES) $(HEADERS)
+	$(CC) $(CFLAGS) -o $@ $(SOURCES) 
+	$(SIZE) $@
